--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>This is the title of the webpage!</title>
+	<title>EUROLIFE - Start your new stage!</title>
 </head>
 <body>
   <img src="logo.jpg" alt="logo" style="display:block; width:100%; height:100%; object-fit: cover;">
